@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 
 project(
 	agbsum
-	VERSION	8
+	VERSION	9
 	DESCRIPTION "GBA ROM header checksum patcher."
 	HOMEPAGE_URL "https://mandelbrot.dk/agbsum"
 	LANGUAGES C
