@@ -15,47 +15,47 @@
 #include <stdio.h>
 
 #if __STDC_VERSION__ > 199901
-#include <stdnoreturn.h>
+# include <stdnoreturn.h>
 #else
-#ifdef __GNUC__
-#define _Noreturn __attribute__ ((noreturn))
-#elif defined(_MSC_VER)
-#define _Noreturn __declspec (noreturn)
-#else
-#define _Noreturn
-#endif
-#define noreturn _Noreturn
+# ifdef __GNUC__
+#  define _Noreturn __attribute__ ((noreturn))
+# elif defined(_MSC_VER)
+#  define _Noreturn __declspec (noreturn)
+# else
+#  define _Noreturn
+# endif
+# define noreturn _Noreturn
 #endif
 
-#define agb_rel ((uint_least64_t)+0x9u)
+#define agb_rel ((uint64_t)+0x9u)
 
 #define agb_romsrt    ((size_t)+0xA0u)
 #define agb_chksumoff ((size_t)+0xBDu-agb_romsrt)
 
 typedef enum {
 	agb_cnd_err,
-	agb_cnd_ok,
+	agb_cnd_oky,
 } agb_cnd;
 
 typedef struct {
-	bool         dopat;
-	char const * pth;
-	bool         sil;
-	FILE *       rom;
+	bool        dopat;
+	char const* pth;
+	bool        sil;
+	FILE *      rom;
 } agb_dat;
 
-uint8_t agb_getsum(void const * rom);
+uint8_t agb_getsum(void const* restrict rom);
 
-void agb_pat(FILE * rom,unsigned char chksum);
+void agb_pat(FILE * restrict rom,unsigned char chksum);
 
 void agb_hlp(void);
 
-void agb_chkpar(agb_dat * dat,int argc,char const * const * argv);
+void agb_chkpar(agb_dat * restrict dat,int argc,char const* const* restrict argv);
 
-void agb_inidat(agb_dat * dat);
+void agb_inidat(agb_dat * restrict dat);
 
-FILE * agb_opn(char const * pth);
-void   agb_red(void *       buf,FILE * rom);
+FILE * agb_opn(char const* restrict pth);
+void   agb_red(void *      restrict buf,FILE * restrict rom);
 
 noreturn void agb_exi(agb_cnd stat,FILE * rom);
 
